--- a/about.html
+++ b/about.html
@@ -2,9 +2,19 @@
 layout: default
 title: About Me
 ---
+<h1>Posts</h1>
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
+<ul>
+  {% for post in site.posts %}
+  <li>
+    <span>{{ post.date | date: "%b %-d, %Y" }}</span>
 
-You can find the source code for the Jekyll new theme at: [github.com/jglovier/jekyll-new](https://github.com/jglovier/jekyll-new)
+    <h2>
+          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        </h2>
+  </li>
+  {% endfor %}
+</ul>
 
-You can find the source code for Jekyll at [github.com/jekyll/jekyll](https://github.com/jekyll/jekyll)
+<p>subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a>
+</p>
