--- a/index.html
+++ b/index.html
@@ -1,6 +1,86 @@
 ---
 layout: default
 ---
-<h1>Simple Sidebar</h1>
+<h1 class="text-center">Simple Sidebar</h1>
 <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
 <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+
+<div id="skills">
+  <div class="container">
+    <div class="row text-center">
+      <h3>OUR SKILLS</h3>
+      <div class="col-lg-3 mt">
+        <canvas id="javascript" height="130" width="130"></canvas>
+        <p>Javascript</p>
+        <br>
+        <script>
+          var doughnutData = [
+              {
+                value: 70,
+                color:"#74cfae"
+              },
+              {
+                value : 30,
+                color : "#3c3c3c"
+              }
+            ];
+            var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
+        </script>
+      </div>
+      <div class="col-lg-3 mt">
+        <canvas id="bootstrap" height="130" width="130"></canvas>
+        <p>Bootstrap</p>
+        <br>
+        <script>
+          var doughnutData = [
+              {
+                value: 90,
+                color:"#74cfae"
+              },
+              {
+                value : 10,
+                color : "#3c3c3c"
+              }
+            ];
+            var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
+        </script>
+      </div>
+      <div class="col-lg-3 mt">
+        <canvas id="wordpress" height="130" width="130"></canvas>
+        <p>Wordpress</p>
+        <br>
+        <script>
+          var doughnutData = [
+              {
+                value: 65,
+                color:"#74cfae"
+              },
+              {
+                value : 35,
+                color : "#3c3c3c"
+              }
+            ];
+            var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
+        </script>
+      </div>
+      <div class="col-lg-3 mt">
+        <canvas id="photoshop" height="130" width="130"></canvas>
+        <p>Photoshop</p>
+        <br>
+        <script>
+          var doughnutData = [
+              {
+                value: 50,
+                color:"#74cfae"
+              },
+              {
+                value : 50,
+                color : "#3c3c3c"
+              }
+            ];
+            var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
+        </script>
+      </div>
+    </div><!-- /row -->
+  </div><!-- /container -->
+</div><!-- /skills -->
