--- a/index.html
+++ b/index.html
@@ -1,129 +1,132 @@
 ---
 layout: default
 ---
+<div class="container-fluid">
+  <div class="row">
+    <div class="wow fadeInUp">
 
-<div class="wow fadeInUp" data-wow-iteration="1">
-
-  <div class="box text-center">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <h3>About Me</h3>
-          <hr class="star-primary">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary
-            user experience. A website is a tool of expression in the 21st century. I will make sure to deliver all that you are looking to express with your website.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="wow fadeInUp" data-wow-iteration="1">
-  <div class="box">
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-lg-12 text-center">
-          <h3>Skills</h3>
-          <hr class="star-primary">
-        </div>
-        <div class="wow fadeIn" data-wow-delay="1s" data-wow-iteration="1">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
-            <canvas id="javascript" height="130" width="130"></canvas>
-            <p>Javascript</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 70,
-                color: "#3868A5"
-              }, {
-                value: 30,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
-            </script>
+      <div class="box text-center">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <h3>About Me</h3>
+              <hr class="star-primary">
+            </div>
           </div>
-        </div>
-        <div class="wow fadeIn" data-wow-delay="1s" data-wow-iteration="1">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
-            <canvas id="bootstrap" height="130" width="130"></canvas>
-            <p>Bootstrap</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 90,
-                color: "#3868A5"
-              }, {
-                value: 10,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
-            </script>
-          </div>
-        </div>
-        <div class="wow fadeIn" data-wow-delay="1s" data-wow-iteration="1">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
-            <canvas id="wordpress" height="130" width="130"></canvas>
-            <p>Wordpress</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 65,
-                color: "#3868A5"
-              }, {
-                value: 35,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
-            </script>
-          </div>
-        </div>
-        <div class="wow fadeIn" data-wow-delay="1s" data-wow-iteration="1">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
-            <canvas id="photoshop" height="130" width="130"></canvas>
-            <p>Photoshop</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 50,
-                color: "#3868A5"
-              }, {
-                value: 50,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
-            </script>
+          <div class="row">
+            <div class="col-xs-12">
+              <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary
+                user experience. A website is a tool of expression in the 21st century. I will make sure to deliver all that you are looking to express with your website.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- /row -->
-  </div>
-  <!-- /container -->
-</div>
 
 
-<div class="wow fadeInUp" data-wow-iteration="1">
-  <div class="box text-center">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <h3>Philosophy</h3>
-          <hr class="star-primary">
+    <div class="wow fadeInUp">
+      <div class="box">
+        <div class="container-fluid">
+          <div class="row text-center">
+            <div class="col-lg-12 text-center">
+              <h3>Skills</h3>
+              <hr class="star-primary">
+            </div>
+            <div class="wow fadeIn" data-wow-delay=".5s">
+              <div class="col-lg-3 col-md-6 col-sm-6 mt">
+                <canvas id="javascript" height="130" width="130"></canvas>
+                <p>Javascript</p>
+                <br>
+                <script>
+                  var doughnutData = [{
+                    value: 70,
+                    color: "#FB8946"
+                  }, {
+                    value: 30,
+                    color: "#4E4E4E"
+                  }];
+                  var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
+                </script>
+              </div>
+            </div>
+            <div class="wow fadeIn" data-wow-delay=".5s">
+              <div class="col-lg-3 col-md-6 col-sm-6 mt">
+                <canvas id="bootstrap" height="130" width="130"></canvas>
+                <p>Bootstrap</p>
+                <br>
+                <script>
+                  var doughnutData = [{
+                    value: 90,
+                    color: "#FB8946"
+                  }, {
+                    value: 10,
+                    color: "#4E4E4E"
+                  }];
+                  var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
+                </script>
+              </div>
+            </div>
+            <div class="wow fadeIn" data-wow-delay=".5s">
+              <div class="col-lg-3 col-md-6 col-sm-6 mt">
+                <canvas id="wordpress" height="130" width="130"></canvas>
+                <p>Wordpress</p>
+                <br>
+                <script>
+                  var doughnutData = [{
+                    value: 65,
+                    color: "#FB8946"
+                  }, {
+                    value: 35,
+                    color: "#4E4E4E"
+                  }];
+                  var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
+                </script>
+              </div>
+            </div>
+            <div class="wow fadeIn" data-wow-delay=".5s">
+              <div class="col-lg-3 col-md-6 col-sm-6 mt">
+                <canvas id="photoshop" height="130" width="130"></canvas>
+                <p>Photoshop</p>
+                <br>
+                <script>
+                  var doughnutData = [{
+                    value: 50,
+                    color: "#FB8946"
+                  }, {
+                    value: 50,
+                    color: "#4E4E4E"
+                  }];
+                  var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
+                </script>
+              </div>
+            </div>
+          </div>
         </div>
+        <!-- /row -->
       </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <p>
-            First and foremost, my goal is to make the web better. I aim to make sure it works first and looks cool second. I intend to make sure it isn't cluttered, the focus is put on its well crafted meaningful content, and it doesn't decieve or take advantage
-            of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are from or how strong their internet connection is.</p>
-          <p>I enjoy making templates, tools, and websites for small and large clients, no matter the business they are in. I like some backend stuff, but front end stuff is my passion.</p>
-          <p>At the end of the day, it all comes down to my love for problem solving. That's why I'm here, doing this, drinking so much coffee. If you have a web problem, let me know, I'd like to help you solve it.
-          </p>
+      <!-- /container -->
+    </div>
+
+
+    <div class="wow fadeInUp">
+      <div class="box text-center">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <h3>Philosophy</h3>
+              <hr class="star-primary">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <p>
+                First and foremost, my goal is to make the web better. I aim to make sure it works first and looks cool second. I intend to make sure it isn't cluttered, the focus is put on its well crafted meaningful content, and it doesn't decieve or take advantage
+                of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are from or how strong their internet connection is.</p>
+              <p>I enjoy making templates, tools, and websites for small and large clients, no matter the business they are in. I like some backend stuff, but front end stuff is my passion.</p>
+              <p>At the end of the day, it all comes down to my love for problem solving. That's why I'm here, doing this, drinking so much coffee. If you have a web problem, let me know, I'd like to help you solve it.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
