--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,7 @@
 ---
 layout: default
-
 title: Blog
 ---
-
-<h1 class="text-center">Posts</h1>
 
 <ul>
   {% for post in site.posts %}
@@ -12,11 +9,30 @@ title: Blog
     <span>{{ post.date | date: "%b %-d, %Y" }}</span>
 
     <h2>
-          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-        </h2>
+      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    </h2>
   </li>
   {% endfor %}
 </ul>
 
 <p>subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a>
 </p>
+
+<div class="wow fadeInUp">
+  <div class="box text-center">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <h3>Blog</h3>
+          <hr class="star-primary">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary
+            user experience. A website is a tool of expression in the 21st century. I will make sure to deliver all that you are looking to express with your website.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
