--- a/blog.html
+++ b/blog.html
@@ -3,34 +3,34 @@ layout: default
 title: Blog
 ---
 
-<ul>
-  {% for post in site.posts %}
-  <li>
-    <span>{{ post.date | date: "%b %-d, %Y" }}</span>
-
-    <h2>
-      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-    </h2>
-  </li>
-  {% endfor %}
-</ul>
-
-<p>subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a>
-</p>
-
 <div class="wow fadeInUp">
-  <div class="box text-center">
-    <div class="container-fluid">
+  <div class="container-fluid">
+    <div class="box text-center">
       <div class="row">
-        <div class="col-lg-12">
-          <h3>Blog</h3>
-          <hr class="star-primary">
+        <h3>Blog</h3>
+        <br>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          {% for post in site.posts %}
+          <div class="boxblog">
+            <div>
+              <h2>
+                {{ post.title }}
+              </h2>
+              <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+              <hr class="star-primary">
+              {{ post.excerpt }}
+              <a class="bloglink"href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg">Read More</a>
+            </div>
+          </div>
+          {% endfor %}
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary
-            user experience. A website is a tool of expression in the 21st century. I will make sure to deliver all that you are looking to express with your website.</p>
+          <p>subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a>
+          </p>
         </div>
       </div>
     </div>
