--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ title: Blog
     <div class="box text-center">
       <div class="row">
         <h3>Blog</h3>
-        <hr>
+        <hr class"star-primary">
       </div>
       <div class="container-fluid">
         <div class="row">
