--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,4 +1,7 @@
---- layout: default title: Portfolio ---
+---
+layout: defaul
+ttitle: Portfolio
+---
 
 <div class="container-fluid">
   <div class="row text-center">
