--- a/blog.html
+++ b/blog.html
@@ -27,10 +27,8 @@ title: Blog
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <p>subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a>
+          <p>subscribe <a href="{{ " feed.xml " | prepend: site.baseurl }}">via RSS</a>
           </p>
-        </div>
       </div>
     </div>
   </div>
