--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,7 +16,7 @@ ttitle: Portfolio
         <div class="col-md-4 col-edit ">
           <div class="grid mask">
             <figure>
-              <img class="img-responsive img-edit" src="img/portfolio/uiowabetas.jpg" alt="">
+              <img class="img-responsive img-edit" src="{{ site.baseurl }}img/portfolio/uiowabetas.jpg" alt="">
               <figcaption>
                 <h5>UIOWABETAS</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
