--- a/blog.html
+++ b/blog.html
@@ -3,32 +3,31 @@ layout: default
 title: Blog
 ---
 
-  <div class="container-fluid">
-    <div class="box text-center">
+<div class="container-fluid">
+  <div class="box text-center">
+    <div class="row">
+      <h3>Blog</h3>
+      <hr class="star-primary">
+    </div>
+    <div class="container-fluid">
       <div class="row">
-        <h3>Blog</h3>
-        <hr class="star-primary">
-      </div>
-      <div class="container-fluid">
-        <div class="row">
-          {% for post in site.posts %}
-          <div class="boxblog">
-            <div>
-              <h2>
-                {{ post.title }}
-              </h2>
-              <p>{{ post.date | date: "%b %-d, %Y" }}</p>
-              <hr class="star-primary">
-              {{ post.excerpt }}
-              <a class="bloglink"href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg">Read More</a>
-            </div>
+        {% for post in site.posts %}
+        <div class="boxblog">
+          <div>
+            <h2>
+              {{ post.title }}
+            </h2>
+            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+            <hr class="star-primary"> {{ post.excerpt }}
+            <a class="bloglink" href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg">Read More</a>
           </div>
-          {% endfor %}
         </div>
-      </div>
-      <div class="row">
-          <p>subscribe <a href="{{ " feed.xml " | prepend: site.baseurl }}">via RSS</a>
-          </p>
+        {% endfor %}
       </div>
     </div>
+    <div class="row">
+      <p>subscribe <a href="{{ " feed.xml " | prepend: site.baseurl }}">via RSS</a>
+      </p>
+    </div>
   </div>
+</div>
