--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@ title: Portfolio
 ---
 
 <div class="container-fluid">
-  <div class="box text-center">
-    <div class="row">
+  <div class="box">
+    <div class="row text-center">
       <h3>Portfolio</h3>
       <hr class="star-primary">
     </div>
