--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class="wow fadeInUp">
-  <div class="box text-center">
+  <div class="box">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row text-center">
           <h3>About Me</h3>
           <hr class="star-primary">
       </div>
