--- a/blog.html
+++ b/blog.html
@@ -2,21 +2,20 @@
 layout: default
 title: Blog
 ---
-<div class="container-fluid">
-  <div class="box text-center">
-    <div class="row">
+<div class="box">
+  <div class="container-fluid">
+    <div class="row text-center">
       <h3>Blog</h3>
       <hr class="star-primary">
     </div>
     {% for post in site.posts %}
     <div class="boxblog">
-    <div class="row">
+      <div class="row">
         <div>
-          <h2>
-            {{ post.title }}
-          </h2>
+          <h3>{{ post.title }}</h3>
           <p>{{ post.date | date: "%b %-d, %Y" }}</p>
-          <hr class="star-primary"> {{ post.excerpt }}
+          <hr class="star-primary">
+          {{ post.excerpt }}
           <a class="bloglink" href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg">Read More</a>
         </div>
       </div>
