--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ title: Blog
     </div>
     {% for post in site.posts %}
     <div class="boxblog">
-      <div class="row">
+      <div class="row text-center">
         <div>
           <h3>{{ post.title }}</h3>
           <p>{{ post.date | date: "%b %-d, %Y" }}</p>
