--- a/blog.html
+++ b/blog.html
@@ -2,15 +2,15 @@
 layout: default
 title: Blog
 ---
-<div class="box">
+<div class="box text-center">
   <div class="container-fluid">
-    <div class="row text-center">
+    <div class="row">
       <h3>Blog</h3>
       <hr class="star-primary">
     </div>
     {% for post in site.posts %}
     <div class="boxblog">
-      <div class="row text-center">
+      <div class="row">
         <div>
           <h3>{{ post.title }}</h3>
           <p>{{ post.date | date: "%b %-d, %Y" }}</p>
