--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
   <div class="box">
     <div class="container-fluid">
       <div class="row text-center">
-          <h3>About Me</h3>
-          <hr class="star-primary">
+        <h3>About Me</h3>
+        <hr class="star-primary">
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -19,15 +19,15 @@ layout: default
 </div>
 
 <div class="wow fadeInUp">
-  <div class="box">
+  <div class="box text-center">
     <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-lg-12 text-center">
-          <h3>Skills</h3>
-          <hr class="star-primary">
-        </div>
+      <div class="row">
+        <h3>Skills</h3>
+        <hr class="star-primary">
+      </div>
+      <div class="row">
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
             <canvas id="javascript" height="130" width="130"></canvas>
             <p>Javascript</p>
             <br>
@@ -44,7 +44,7 @@ layout: default
           </div>
         </div>
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
             <canvas id="bootstrap" height="130" width="130"></canvas>
             <p>Bootstrap</p>
             <br>
@@ -61,7 +61,7 @@ layout: default
           </div>
         </div>
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
             <canvas id="wordpress" height="130" width="130"></canvas>
             <p>Wordpress</p>
             <br>
@@ -78,7 +78,7 @@ layout: default
           </div>
         </div>
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 mt">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
             <canvas id="photoshop" height="130" width="130"></canvas>
             <p>Photoshop</p>
             <br>
@@ -96,19 +96,15 @@ layout: default
         </div>
       </div>
     </div>
-    <!-- /row -->
   </div>
-  <!-- /container -->
 </div>
 
 <div class="wow fadeInUp">
-  <div class="box text-center">
+  <div class="box">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="row text-center">
           <h3>Philosophy</h3>
           <hr class="star-primary">
-        </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
