--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 layout: default
 title: Portfolio
 ---
-
+<div class="wow fadeInUp">
 <div class="box">
   <div class="container-fluid">
     <div class="row text-center">
@@ -152,4 +152,5 @@ title: Portfolio
       <!-- /col -->
     </div>
   </div>
+</div>
 </div>
