--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,138 @@ layout: default
 title: Resume
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
+<div class="wow fadeInUp">
+<div class="box">
+  <div class="container-fluid">
+    <div class="row">
+      <h3>Resume</h3>
+      <hr class="star-primary">
+    </div>
 
-You can find the source code for the Jekyll new theme at: [github.com/jglovier/jekyll-new](https://github.com/jglovier/jekyll-new)
+    <div class="boxblog">
+      <div class="container-fluid desc">
+        <div class="row">
+          <div class="col-lg-2 col-lg-offset-1">
+            <h5>EDUCATION</h5>
+          </div>
+          <div class="col-lg-6">
+            <p>
+              <t>Master of Web Design</t>
+              <br/> St. Patrick University
+              <br/>
+              <i>3 Years Course</i>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <sm>GRADUATING IN MAY 2014</sm>
+              <br/>
+              <imp>
+                <sm>IN PROGRESS</sm>
+              </imp>
+            </p>
+          </div>
+          <div class="col-lg-6 col-lg-offset-3">
+            <p>
+              <t>Degree of Web Developer</t>
+              <br/> Hastings University
+              <br/>
+              <i>2 Years Course</i>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <sm>JUNE 2012</sm>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-You can find the source code for Jekyll at [github.com/jekyll/jekyll](https://github.com/jekyll/jekyll)
+    <!--WORK DESCRIPTION -->
+    <div class="boxblog">
+      <div class="container-fluid desc">
+        <div class="row">
+          <div class="col-lg-2 col-lg-offset-1">
+            <h5>WORK</h5>
+          </div>
+          <div class="col-lg-6">
+            <p>
+              <t>Front-end Developer</t>
+              <br/> Black Tie Corp.
+              <br/>
+            </p>
+            <p>
+              <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book.
+              </more>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <sm>AUGUST 2012 - CURRENT</sm>
+            </p>
+          </div>
+          <div class="col-lg-6 col-lg-offset-3">
+            <p>
+              <t>Web Designer - Intern</t>
+              <br/> Onassis Ltd.
+              <br/>
+            </p>
+            <p>
+              <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book.
+              </more>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <sm>JUNE 2010 - JULY 2012</sm>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--AWARDS DESCRIPTION -->
+    <div class="boxblog">
+      <div class="container-fluid desc">
+        <div class="row">
+          <div class="col-lg-2 col-lg-offset-1">
+            <h5>AWARDS</h5>
+          </div>
+          <div class="col-lg-6">
+            <p>
+              <t>Best Web Design</t>
+              <br/> Black Tie Site
+              <br/>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <sm>NOVEMBER 2013</sm>
+            </p>
+          </div>
+          <div class="col-lg-6 col-lg-offset-3">
+            <p>
+              <t>Designer of the Year</t>
+              <br/> Awwwards Site
+            </p>
+            <p>
+              <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book.
+              </more>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <sm>2013</sm>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+</div>
