--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@ title: Resume
 <div class="wow fadeInUp">
 <div class="box">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row text-center">
       <h3>Resume</h3>
       <hr class="star-primary">
     </div>
