--- a/blog.html
+++ b/blog.html
@@ -4,32 +4,34 @@ title: Blog
 ---
 
 <div class="wow fadeInUp">
-  <div class="box text-center">
+  <div class="box">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row text-center">
         <div class="col-xs-12">
           <h3>Blog</h3>
           <hr class="star-primary">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-8">
+        <div class="col-xs-12 col-md-10">
           {% for post in site.posts %}
-          <div class="boxblog">
-            <h3>{{ post.title }}</h3>
-            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
-            <hr class="star-primary"> {{ post.excerpt }}
-            <a class="bloglink" href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg">Read More</a>
-          </div>
+            <div class="boxblog">
+              <h3 class="text-center">{{ post.title }}</h3>
+              <p class="text-center">{{ post.date | date: "%b %-d, %Y" }}</p>
+              <hr class="star-primary text-center">
+              {{ post.excerpt }}
+              <br>
+              <a class="bloglink" href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg">Read More</a>
+            </div>
           {% endfor %}
         </div>
-        <div class="col-xs-12 col-md-3 offset-md-1">
-          <div class="boxblog">
-            <h5>News</h5>
-          </div>
+      <div class="col-xs-12 col-md-2">
+        <div class="boxblog">
+          <h5>News</h5>
         </div>
       </div>
-      <div class="row">
+    </div>
+      <div class="row text-center">
         <div class="col-xs-12">
           <p>subscribe <a href="{{ " feed.xml " | prepend: site.baseurl }}">via RSS</a>
           </p>
