--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ layout: default
   <div class="box">
     <div class="container-fluid">
       <div class="row text-center">
+        <div class="col-xs-12">
         <h3>About Me</h3>
         <hr class="star-primary">
+      </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -22,8 +24,10 @@ layout: default
   <div class="box text-center">
     <div class="container-fluid">
       <div class="row">
+        <div class="col-xs-12">
         <h3>Skills</h3>
         <hr class="star-primary">
+      </div>
       </div>
       <div class="row">
         <div class="wow fadeIn" data-wow-delay=".5s">
@@ -103,8 +107,10 @@ layout: default
   <div class="box">
     <div class="container-fluid">
       <div class="row text-center">
+        <div class="col-xs-12">
           <h3>Philosophy</h3>
           <hr class="star-primary">
+        </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
