--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,10 @@ title: Portfolio
 <div class="box">
   <div class="container-fluid">
     <div class="row text-center">
+      <div class="col-xs-12">
       <h3>Portfolio</h3>
       <hr class="star-primary">
+    </div>
     </div>
     <div class="row row-edit">
       <!-- PORTFOLIO IMAGE 1 -->
