--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,10 @@ title: Resume
 <div class="box">
   <div class="container-fluid">
     <div class="row text-center">
+      <div class="col-xs-12">
       <h3>Resume</h3>
       <hr class="star-primary">
+    </div>
     </div>
 
     <div class="boxblog">
