--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
       </div>
       <div class="row">
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
+          <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="javascript" height="130" width="130"></canvas>
             <p>Javascript</p>
             <br>
@@ -48,7 +48,7 @@ layout: default
           </div>
         </div>
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
+          <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="bootstrap" height="130" width="130"></canvas>
             <p>Bootstrap</p>
             <br>
@@ -65,7 +65,7 @@ layout: default
           </div>
         </div>
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
+          <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="wordpress" height="130" width="130"></canvas>
             <p>Wordpress</p>
             <br>
@@ -82,7 +82,7 @@ layout: default
           </div>
         </div>
         <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mt">
+          <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="photoshop" height="130" width="130"></canvas>
             <p>Photoshop</p>
             <br>
