--- a/resume.html
+++ b/resume.html
@@ -8,59 +8,60 @@ title: Resume
   <div class="container-fluid">
     <div class="row text-center">
       <div class="col-xs-12">
-      <h3>Resume</h3>
-      <hr class="star-primary">
-    </div>
-    </div>
-
-    <div class="boxblog">
-      <div class="container-fluid desc">
-        <div class="row">
-          <div class="col-lg-2 col-lg-offset-1">
-            <h5>EDUCATION</h5>
-          </div>
-          <div class="col-lg-6">
-            <p>
-              <t>Master of Web Design</t>
-              <br/> St. Patrick University
-              <br/>
-              <i>3 Years Course</i>
-            </p>
-          </div>
-          <div class="col-lg-3">
-            <p>
-              <sm>GRADUATING IN MAY 2014</sm>
-              <br/>
-              <imp>
-                <sm>IN PROGRESS</sm>
-              </imp>
-            </p>
-          </div>
-          <div class="col-lg-6 col-lg-offset-3">
-            <p>
-              <t>Degree of Web Developer</t>
-              <br/> Hastings University
-              <br/>
-              <i>2 Years Course</i>
-            </p>
-          </div>
-          <div class="col-lg-3">
-            <p>
-              <sm>JUNE 2012</sm>
-            </p>
-          </div>
-        </div>
+        <h3>Resume</h3>
+        <hr class="star-primary">
       </div>
     </div>
 
-    <!--WORK DESCRIPTION -->
-    <div class="boxblog">
-      <div class="container-fluid desc">
-        <div class="row">
-          <div class="col-lg-2 col-lg-offset-1">
-            <h5>WORK</h5>
+        <div class="boxresume">
+          <div class="row">
+            <div class="col-sm-2">
+              <h5 class="text-center">EDUCATION</h5>
+            </div>
+            <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
+              <p>
+                <t>Master of Web Design</t>
+                <br/> St. Patrick University
+                <br/>
+                <i>3 Years Course</i>
+              </p>
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <p>
+                <sm>GRADUATING MAY 2014</sm>
+                <br/>
+                <imp>
+                  <sm>In Progress</sm>
+                </imp>
+              </p>
+            </div>
           </div>
-          <div class="col-lg-6">
+          <br>
+          <div class="row">
+            <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
+              <p>
+                <t>Degree of Web Developer</t>
+                <br/> Hastings University
+                <br/>
+                <i>2 Years Course</i>
+              </p>
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <p>
+                <sm>JUNE 2012</sm>
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+    <!--WORK DESCRIPTION -->
+    <div class="boxresume">
+        <div class="row">
+          <div class="col-sm-2">
+            <h5 class="text-center">WORK</h5>
+          </div>
+          <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
               <t>Front-end Developer</t>
               <br/> Black Tie Corp.
@@ -72,12 +73,15 @@ title: Resume
               </more>
             </p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-4">
             <p>
               <sm>AUGUST 2012 - CURRENT</sm>
             </p>
           </div>
-          <div class="col-lg-6 col-lg-offset-3">
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
             <p>
               <t>Web Designer - Intern</t>
               <br/> Onassis Ltd.
@@ -89,35 +93,36 @@ title: Resume
               </more>
             </p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-4">
             <p>
               <sm>JUNE 2010 - JULY 2012</sm>
             </p>
           </div>
         </div>
-      </div>
     </div>
 
     <!--AWARDS DESCRIPTION -->
-    <div class="boxblog">
-      <div class="container-fluid desc">
+    <div class="boxresume">
         <div class="row">
-          <div class="col-lg-2 col-lg-offset-1">
-            <h5>AWARDS</h5>
+          <div class="col-sm-2">
+            <h5 class="text-center">AWARDS</h5>
           </div>
-          <div class="col-lg-6">
+          <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
               <t>Best Web Design</t>
               <br/> Black Tie Site
               <br/>
             </p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-4">
             <p>
               <sm>NOVEMBER 2013</sm>
             </p>
           </div>
-          <div class="col-lg-6 col-lg-offset-3">
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
             <p>
               <t>Designer of the Year</t>
               <br/> Awwwards Site
@@ -128,15 +133,13 @@ title: Resume
               </more>
             </p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-4">
             <p>
               <sm>2013</sm>
             </p>
           </div>
         </div>
-      </div>
     </div>
-
   </div>
 </div>
 </div>
