--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@ title: Portfolio
             <img class="img-responsive img-edit" src="{{ "/img/portfolio/uiowabetas.jpg" | prepend: site.baseurl }}" alt="">
             <figcaption>
               <h5>UIOWABETAS</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg" data-target="#myModal">Take a Look</a>
             </figcaption>
             <!-- /figcaption -->
           </figure>
@@ -42,7 +42,7 @@ title: Portfolio
             </div>
             <div class="modal-body">
               <p>
-                <img class="img-responsive img-edit" src="img/portfolio/uiowabetas.jpg" alt="uiowabetas.com">
+                <img class="img-responsive img-edit" src="{{ "/img/portfolio/uiowabetas.jpg" | prepend: site.baseurl }}" alt="uiowabetas.com">
               </p>
               <div class="modalp">This project was crafted for my fraternity at the University of Iowa.
                 <ul>
@@ -70,7 +70,7 @@ title: Portfolio
       <div class="col-md-4 col-edit">
         <div class="grid mask">
           <figure>
-            <img class="img-responsive img-edit" src="img/portfolio/folio02.jpg" alt="">
+            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio02.jpg" | prepend: site.baseurl }}" alt="">
             <figcaption>
               <h5>UI DESIGN</h5>
               <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
@@ -87,7 +87,7 @@ title: Portfolio
       <div class="col-md-4 col-edit">
         <div class="grid mask">
           <figure>
-            <img class="img-responsive img-edit" src="img/portfolio/folio03.jpg" alt="">
+            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio03.jpg" | prepend: site.baseurl }}" alt="">
             <figcaption>
               <h5>ANDROID PAGE</h5>
               <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
@@ -106,7 +106,7 @@ title: Portfolio
       <div class="col-md-4 col-edit">
         <div class="grid mask">
           <figure>
-            <img class="img-responsive img-edit" src="img/portfolio/folio04.jpg" alt="">
+            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio04.jpg" | prepend: site.baseurl }}" alt="">
             <figcaption>
               <h5>PROFILE</h5>
               <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
@@ -123,7 +123,7 @@ title: Portfolio
       <div class="col-md-4 col-edit">
         <div class="grid mask">
           <figure>
-            <img class="img-responsive img-edit" src="img/portfolio/folio05.jpg" alt="">
+            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio05.jpg" | prepend: site.baseurl }}" alt="">
             <figcaption>
               <h5>TWITTER STATUS</h5>
               <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
@@ -140,7 +140,7 @@ title: Portfolio
       <div class="col-md-4 col-edit">
         <div class="grid mask">
           <figure>
-            <img class="img-responsive img-edit" src="img/portfolio/folio06.jpg" alt="">
+            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio06.jpg" | prepend: site.baseurl }}" alt="">
             <figcaption>
               <h5>PHONE MOCKUP</h5>
               <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
